# LX200emulator

./: .gitignore  MeadeLX200protocol.json  README.md  Summary_document.md  designdoc.txt  lx200emulator.py  lx200emulator_v2.py  main.py  net2serial_bridge.py  pyproject.toml  scopeboss_lx200gps_emulator.py
.claude/: settings.local.json
.cursor/rules/: uv.mdc
scopeboss_emulator/: config.py  server.py
scopeboss_emulator/core/: policy.py  reducer.py  state.py
scopeboss_emulator/protocol/: parser.py  types.py
tests/: README.md  conftest.py  test_home_and_park.py  test_protocol_basic.py
tests/unit/: test_parser.py  test_policy.py  test_reducer.py
